testsuite/tests/parser/should_fail/T12610.hs
{-# OPTIONS -fwarn-tabs #-}
module T12610 where

p = let  x = 4
	y = 5
    in 12
