testsuite/tests/parser/should_fail/T12610.stderr

T12610.hs:5:1: warning: [-Wtabs (in -Wdefault)]
    Tab character found here.
    Suggested fix: Please use spaces instead.

T12610.hs:5:9: parse error on input ‘y’
